<resources>
    <string name="app_name">Gestor de Proyectos</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_name">Nombre</string>
    <string name="prompt_surname">Apellidos</string>
    <string name="prompt_description">Descripción</string>
    <string name="prompt_new">Crear</string>
    <string name="prompt_start_date">Fecha de inicio</string>
    <string name="prompt_stimated_end_date">Fecha estimada de fin.</string>
    <string name="prompt_repository">Respositorio github.</string>
    <string name="prompt_update">Actualizar</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="prompt_sprints">Sprints</string>
    <string name="prompt_charts">Estadísticas</string>
    <string name="prompt_edit">Editar</string>

    <string name="prompt_users">Usuarios</string>
    <string name="prompt_not_ended">No finalizado</string>

    <string name="label_repository">Repositorio:</string>
    <string name="prompt_end_date">Fecha finalización:</string>
    <string name="prompt_role">Rol:</string>


    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">La dirección de email es incorrecta</string>
    <string name="error_invalid_password">La contraseña es demasiado corta</string>
    <string name="error_invalid_date">La fecha de fin no puede ser anterior a la de inicio.</string>

    <string name="error_incorrect_password">La contraseña es incorrecta</string>
    <string name="error_field_required">Este campo es obligatorio</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="username">"Username"</string>
    <string name="registrar">Registrar</string>
    <string name="title_activity_principal">PrincipalActivity</string>

    <string name="title_activity_main">Proyectos</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_log_out">Log out</string>

    <string name="title_activity_home">Proyectos</string>
    <string name="title_activity_project">ProjectActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="lorem_75">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sit amet nisi eu tortor egestas blandit. Vivamus condimentum placerat ante, eget maximus urna ornare id. Maecenas vel nibh vel lorem tristique aliquam. Sed auctor, risus at tempor scelerisque, sapien nisl blandit libero, sit amet venenatis lectus mi ac felis. Sed mattis dignissim mauris eget blandit. Cras mollis mauris mauris, non iaculis sem volutpat a. Integer non orci erat. Nam bibendum erat tortor, et cursus eros dictum a.</string>
    <string name="title_activity_sprint">SprintActivity</string>
    <string name="title_activity_probando">ProbandoActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_prrar">PrrarActivity</string>
    <string name="title_activity_task">TaskActivity</string>

    <string name="acerca_de_avatars">Smashicons (https://www.flaticon.com/authors/smashicons)</string>
    <string name="acerca_de_autor">Sergio Julio García Urdiales</string>
</resources>

