<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewProjectActivity">

    <ScrollView
        android:id="@+id/new_project_form"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:foregroundGravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foregroundGravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:weightSum="1">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_nombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/prompt_name"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/prompt_description"
                    android:inputType="text"
                    android:maxLines="10"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_respository"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/prompt_repository"
                    android:inputType="textUri"
                    android:maxLines="1"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/label_start_date"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="20dip"
                    android:text="@string/prompt_start_date"
                    android:textAppearance="@android:style/TextAppearance.Material.Small" />

                <ImageButton
                    android:id="@+id/imageButton"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:padding="10dp"
                    app:srcCompat="@drawable/icono_today_48_white" />

                <TextView
                    android:id="@+id/label_end_date"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="20dip"
                    android:text="@string/prompt_stimated_end_date"
                    android:textAppearance="@android:style/TextAppearance.Material.Small" />

                <ImageButton
                    android:id="@+id/imageButton2"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:padding="20dip"
                    app:srcCompat="@drawable/icono_today_48_white" />
            </TableRow>
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/input_start_date"
                    android:layout_marginTop="-18dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="20dp"
                    android:text="/  /  "
                    android:textAppearance="@android:style/TextAppearance.Material.Medium" />


                <TextView
                    android:id="@+id/input_end_date"
                    android:layout_marginTop="-18dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="20dp"
                    android:text="/  /"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium" />
            </TableRow>

            <Button
                android:id="@+id/new_project_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:text="@string/prompt_new"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>