<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="sergiojuliogu.myapplication.Activities.LoginActivity">

    <!-- Progress -->
    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/login_progress"
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="gone">
        <ProgressBar
            android:layout_gravity="center"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible" />
    </LinearLayout>


    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical|center_horizontal|center"
                android:orientation="vertical">

                <AutoCompleteTextView
                    android:id="@+id/Username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:completionHint="Username"
                    android:hint="@string/username"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    tools:ignore="InvalidImeActionId" />

            </android.support.design.widget.TextInputLayout>



            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="?android:attr/textColorLinkInverse"
                android:text="Log in"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/linkRegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:gravity="center"
                android:onClick="onClick"
                android:text="Registrarse"
                android:textAppearance="@android:style/TextAppearance.Material.Small.Inverse"
                android:textColor="@color/colorAccent" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
